# playwright-api-web-mobile

./: .gitignore  .pre-commit-config.yaml  ALLURE_TEST_IDS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  README_TEMPLATE.md  conftest.py  pyproject.toml
.github/workflows/: api-tests.yml  ci.yml  mobile-tests.yml  publish-report.yml  web-tests.yml
config/: credentials.example.yaml  env_qa.yaml
docs/: ADDING_NEW_TEST.md  API_TEST_COVERAGE.md  CI_OVERVIEW.md  CONFTEST_GUIDE.md  ENVIRONMENT_SETUP.md  LEARNING_PATH.md  MOBILE_TESTING_GUIDE.md  PROJECT_STRUCTURE.md
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
scripts/: download_apk.py
src/api_clients/: auth_service.py  base_service.py  cart_service.py  order_service.py  product_service.py  user_service.py
src/mobile/: base_screen.py  driver_factory.py
src/mobile/capabilities/: android.py  ios.py
src/mobile/screens/: cart_screen.py  checkout_screen.py  login_screen.py  product_detail_screen.py  product_list_screen.py
src/models/: cart.py  order.py  product.py  user.py
src/pages/: account_page.py  base_page.py  cart_page.py  checkout_page.py  login_page.py  product_detail_page.py  product_listing_page.py  register_page.py
src/utils/: assertions.py  credential_manager.py  data_factory.py  mobile_step.py  web_step.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_cart.py  test_orders.py  test_products.py  test_users.py
tests/mobile/: README.md  conftest.py  test_browse.py  test_cart.py  test_checkout.py  test_login.py
tests/web/: conftest.py  test_account.py  test_e2e_purchase.py  test_login.py  test_search.py
